GNOME Bugzilla – Bug 701503
Fix documentation for atk_object_get_attributes()
Last modified: 2013-06-03 10:27:22 UTC
Current documentation for atk_object_get_attributes() is as follows: """ * Returns: (transfer none): an #AtkAttributeSet consisting of all explicit * properties/annotations applied to the object, or an empty set if the object * has no name-value pair attributes assigned to it. """ ... which is wrong since it should be stated that is (transfer full) instead, and suggest to use atk_attribute_set_free() to free that memory once used, which is btw what is said for atk_text_get_default_attributes[1], which is a very similar function in the AtkText interface. I've checked GTK+ and WebKit and they are already assuming transfer-full in their respective implementations, so I would say I fix in the documentation here would be in order. [1] https://developer.gnome.org/atk/unstable/AtkText.html#atk-text-get-default-attributes
Created attachment 245904 [details] [review] Patch proposal This should be enough, I guess
Review of attachment 245904 [details] [review]: Looks good
Comment on attachment 245904 [details] [review] Patch proposal Committed. Thanks!