docs: Fix documentation for atk_object_get_attributes()

Replace the wrong (transfer-none) annotation with (transfer-full), and
suggest to free it with atk_attribute_set_free() when done.

https://bugzilla.gnome.org/show_bug.cgi?id=701503